add botao link para programacao

--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@ title: Home
 </div>
 <div class="container-fluid text-center bg-info text-light py-5">
 	<div class="row">
-    <div class="col-lg">
+    <div class="col-lg py-2">
 	  	<svg class="icon icon-envelope-o"><use xlink:href="#icon-envelope-o"></use></svg>
 	    <h3>O evento</h3>
 	    <p>
 	    	O evento é totalmente gratuito e aberto a toda comunidade de Cachoeiro e região. Algumas atividades requerem inscrição e possuem limite de vaga. Uma agenda detalhada da programação será divulgada online previamente. 
 	    </p>
     </div>
-    <div class="col-lg">
+    <div class="col-lg py-2">
       <svg class="icon icon-clock-o"><use xlink:href="#icon-clock-o"></use></svg>
 	    <h3>Quando</h3>
 	    <p>
 	    	O evento deste ano acontecerá nos dias 15 e 16 de março de 2019.  
 	    </p>
+	    <a class="btn btn-warning btn-lg text-info" href="{{ site.url }}/programacao/" role="button">Programação</a>
     </div>
-    <div class="col-lg">
+    <div class="col-lg py-2">
       <svg class="icon icon-map-marker"><use xlink:href="#icon-map-marker"></use></svg>
 	    <h3>Onde</h3>
 	    <p>
