cricao pagina erro 404

--- a/404.html
+++ b/404.html
@@ -2,6 +2,14 @@
 layout: default
 lang: pt-br
 title: 404 - Page not found
+permalink: /404.html
 ---
 
-<img src="{{ site.baseurl }}/assets/img/404.png" alt="Página não encontrada" width="200" height="200">
+<div class="text-center py-5">
+	<img class="img-fluid p-4" src="{{ site.baseurl }}/assets/img/404.png" alt="Página não encontrada" height="400">
+	<div class="container">
+		<p>A página solicitada não pôde ser encontrada.</p> 
+		<hr class="bg-info">
+		<a class="btn btn-warning text-light" href="{{ site.url }}">Voltar ao início</a>
+	</div>
+</div>
