atualizacao de layout pagina 404

--- a/404.html
+++ b/404.html
@@ -8,8 +8,7 @@ permalink: /404.html
 <div class="text-center py-5">
 	<img class="img-fluid p-4" src="{{ site.baseurl }}/assets/img/404.png" alt="Página não encontrada" height="400">
 	<div class="container">
-		<p>A página solicitada não pôde ser encontrada.</p> 
-		<hr class="bg-info">
+		<p class="lead">A página solicitada não pôde ser encontrada.</p> 
 		<a class="btn btn-warning text-light" href="{{ site.url }}">Voltar ao início</a>
 	</div>
 </div>
