--- a/index.html
+++ b/index.html
@@ -108,3 +108,11 @@ title: Home
 	  <p>Entre em contato pelo email {{ site.contact.email }}, vai ser um prazer te ajudar :) </p>
 	</div>
 </div>
+<div class="container-fluid py-5">
+	<div class="text-center">
+		<img src="{{ site.baseurl }}/assets/img/componentes.svg" alt="Ilustração componetes eletrônicos" height="200">
+		<h2 class="py-4">Uma celebração mundial do Arduino</h2>
+		<p class="lead">São 529 eventos em 94 países</p>
+		<p>Cachoeiro de Itapemirim é a única cidade que promove o Arduino Day em terras capixabas.</p>
+	</div>
+</div>
