--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ title: Home
   	<img src="{{ site.baseurl }}/assets/img/arduinoday19.png" class="img-fluid">
     <h1 class="display-4">Unindo pessoas e projetos</h1>
     <p class="lead">Está chegando o Arduino Day 2019. Venha compartilhar ideias com a gente!</p>
+    <p class="lead py-2">15 e 16 de março <span class="badge badge-pill badge-info">Save the Date!</span></p>
     <a class="btn btn-info btn-lg" href="{{ site.url }}/inscricao/" role="button">Faça sua inscrição</a>
   </div>
 </div>
