--- a/index.html
+++ b/index.html
@@ -127,6 +127,4 @@ title: Home
 		<p>Atualmente, <strong>Cachoeiro de Itapemirim</strong> é a única cidade que promove o Arduino Day em terras capixabas</p>
 	</div>
 </div>
-<!-- Start Location -->
-<div id="location" class="map"></div>
-<!-- End Location -->
+{% include google-map.html latitude=-20.803049 longitude=-41.155421 zoom=14 %}
