add descricao nas paginas

--- a/404.html
+++ b/404.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 lang: pt-br
-title: 404 - Page not found
+title: 404 Página não encontrada
+description: A página solicitada não pôde ser encontrada.
 permalink: /404.html
 ---
 
