--- a/programacao.html
+++ b/programacao.html
@@ -2,6 +2,7 @@
 layout: default
 lang: pt-br
 title: Programação
+description: Fique de olho na programação do evento, pois estará recheado de atividades bacanas.
 permalink: /programacao/
 ---
 <div class="jumbotron jumbotron-fluid bg-white">
