--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@ permalink: /404.html
 ---
 
 <div class="text-center py-5">
-	<img class="img-fluid p-4" src="{{ site.baseurl }}/assets/img/404.svg" alt="Página não encontrada" height="400">
+	<img class="img-fluid p-4" src="{{ site.baseurl }}/assets/img/404.svg" alt="404 Página não encontrada" height="400">
 	<div class="container">
 		<p class="lead">A página solicitada não pôde ser encontrada.</p> 
 		<a class="btn btn-warning text-light" href="{{ site.url }}">Voltar ao início</a>
