--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 ---
 <div class="jumbotron" id="hero">
   <div class="container">
-  	<img src="{{ site.baseurl }}/assets/img/arduinoday19.png" class="img-fluid">
+  	<img src="{{ site.baseurl }}/assets/img/arduinoday19.png" alt="Logo Arduino Day 2019" class="img-fluid">
     <h1 class="display-4">Unindo pessoas e projetos</h1>
     <p class="lead">Está chegando o Arduino Day 2019. Venha compartilhar ideias com a gente!</p>
     <p class="lead py-2">15 e 16 de março <span class="badge badge-pill badge-info">Save the Date!</span></p>
@@ -75,7 +75,7 @@ title: Home
 	  <div class="row">
 	  	{% for member in site.data.team %}
 		  <div class="col-md-4">
-		    <img class="rounded-circle filter-member" src="{{ site.baseurl }}/assets/img/members/{{ member.image }}" alt="{{ member.name }}" width="200" height="200">
+		    <img class="rounded-circle filter-member" src="{{ site.baseurl }}/assets/img/members/{{ member.image }}" alt="Foto {{ member.name }}" width="200" height="200">
 		    <p class="lead py-2">{{ member.name }}</p>
 		  </div>
 			{% endfor %}
