atualizacao texto estatisticas do evento

--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@ title: Home
 	<div class="text-center">
 		<img class="img-fluid" src="{{ site.baseurl }}/assets/img/componentes.svg" alt="Ilustração componetes eletrônicos">
 		<h2 class="py-4">Uma celebração mundial do Arduino</h2>
-		<p class="lead">São mais de 500 eventos que acontecem em quase 100 países</p>
+		<!-- CURRENTLY: 189 EVENTS, 61 COUNTRIES -->
+		<p class="lead">São múltiplos eventos que acontecem em diversos países</p>
 		<p>Atualmente, <strong>Cachoeiro de Itapemirim</strong> é a única cidade que promove o Arduino Day em terras capixabas</p>
 	</div>
 </div>
