mudanca imagem da sessao local

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ title: Home
 	  <hr class="hr-15-laranja">
 	</div>
 	<div class="text-center">
-		<img class="img-fluid" src="{{ site.baseurl }}/assets/img/componentes.svg" alt="Ilustração componetes eletrônicos">
+		<img class="img-fluid" src="{{ site.baseurl }}/assets/img/coracao.png" alt="Ilustração componetes eletrônicos">
 		<h2 class="py-4">Uma celebração mundial do Arduino</h2>
 		<!-- CURRENTLY: 189 EVENTS, 61 COUNTRIES -->
 		<p class="lead">São múltiplos eventos que acontecem em diversos países</p>
