--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@ title: Home
     <div class="div-text-home">
     	<h1 class="display-4">Unindo pessoas e projetos</h1>    	
     	<p class="lead">Está chegando o Arduino Day 2019. Venha compartilhar ideias com a gente!</p>
-    	<p class="lead py-2">15 e 16 de março <span class="badge badge-pill text-light bg-cor-padrao">Save the Date!</span></p>
+    	<p class="lead py-2">15 e 16 de março <span class="badge badge-pill text-light bg-info1">Save the Date!</span></p>
     </div>
     <a class="btn btn-info btn-lg" href="{{ site.url }}/inscricao/" role="button">Faça sua inscrição</a>
   </div>
 </div>
-<div class="container-fluid text-center bg-info text-light py-5">
-	<div class="row">
+<div class="container-fluid text-center text-light py-5 skew bg-info1">
+	<div class="row skew-reverse">
     <div class="col-lg py-2">
 	  	<svg class="icon icon-envelope-o"><use xlink:href="#icon-envelope-o"></use></svg>
 	    <h3>O evento</h3>
@@ -29,7 +29,7 @@ title: Home
 	    <p>
 	    	O evento deste ano acontecerá nos dias 15 e 16 de março de 2019.  
 	    </p>
-	    <a class="btn btn-warning btn-lg text-info" href="{{ site.url }}/programacao/" role="button">Programação</a>
+	    <a class="btn btn-info btn-lg" href="{{ site.url }}/programacao/" role="button">Programação</a>
     </div>
     <div class="col-lg py-2">
       <svg class="icon icon-map-marker"><use xlink:href="#icon-map-marker"></use></svg>
@@ -41,12 +41,12 @@ title: Home
   </div>
 </div>
 <div class="container text-center py-5">
-	<h2 class="p-4">Atividades</h2> 
+	<h2 class="p-4 h2-text">Atividades</h2> 
 	<hr class="hr-15-laranja">
 	<div class="row">
     <div class="col-lg">
 	  	<svg class="icon icon-envelope-o"><use xlink:href="#icon-envelope-o"></use></svg>
-	    <h3>Palestras</h3>
+	    <h3 class="h3-text">Palestras</h3>
 	    <hr class="hr-15-verde">
 	    <p>
 	    	O estado da arte em Arduino, Impressão 3D, são alguns dos temas a serem abordados nas palestras desta segunda edição do Arduino Day.  
@@ -54,7 +54,7 @@ title: Home
     </div>
     <div class="col-lg">
       <svg class="icon icon-clock-o"><use xlink:href="#icon-clock-o"></use></svg>
-	    <h3>Exposições</h3>
+	    <h3 class="h3-text">Exposições</h3>
 	    <hr class="hr-15-verde">
 	    <p>
 	    	Mostra com os trabalhos já desenvolvidos no campus utilizando a plataforma Arduino. Destaque para a apresentação dos trabalhos a serem proferidas pelos próprios alunos. 
@@ -62,7 +62,7 @@ title: Home
     </div>
     <div class="col-lg">
       <svg class="icon icon-map-marker"><use xlink:href="#icon-map-marker"></use></svg>
-	    <h3>Minicursos</h3>
+	    <h3 class="h3-text">Minicursos</h3>
 	    <hr class="hr-15-verde">
 	    <p>
 	    	Minicursos para os níveis iniciantes serão oferecidos. Todos com atividades baseadas em exemplos práticos e muito aplicados nos dias de hoje.  
@@ -70,8 +70,8 @@ title: Home
     </div>
   </div>
 </div>
-<div class="container-fluid bg-info text-light py-5">
-	<div class="container text-center">
+<div class="container-fluid bg-info text-light py-5 skew-org">
+	<div class="container text-center skew-reverse-org">
 		<h2 class="py-4">Organização</h2>
 	  <hr class="hr-15-branco mb-5">
 	  <div class="row">
@@ -87,7 +87,7 @@ title: Home
 <div id="faq" class="container py-5">
 	<div>
 		<div class="text-center">
-		  <h2 class="py-4">FAQ</h2>
+		  <h2 class="py-4 text-y">FAQ</h2>
 		  <hr class="hr-15-laranja">
 		  <p>Criamos o FAQ para te ajudar a esclarecer as principais dúvidas relacionadas ao evento.</p>
 		</div>
@@ -111,23 +111,23 @@ title: Home
 		</div>
 	</div>
 </div>
-<div class="container-fluid bg-info text-light py-5">
-	<div class="text-center">
+<div class="container-fluid bg-info1 text-light py-5 skew">
+	<div class="text-center skew-reverse">
 	  <h2 class="py-4">Não respondemos sua dúvida?</h2>
 	  <p>Entre em contato pelo email {{ site.contact.email }}, vai ser um prazer te ajudar :) </p>
 	</div>
 </div>
 <div id="local" class="container-fluid py-5">
 	<div class="text-center">
-	  <h2 class="py-4">Local</h2>
+	  <h2 class="py-4 h2-text">Local</h2>
 	  <hr class="hr-15-laranja">
 	</div>
 	<div class="text-center">
 		<img class="img-fluid" src="{{ site.baseurl }}/assets/img/coracao.png" alt="Ilustração componetes eletrônicos">
-		<h2 class="py-4">Uma celebração mundial do Arduino</h2>
+		<h2 class="py-4 text-y">Uma celebração mundial do Arduino</h2>
 		<!-- CURRENTLY: 189 EVENTS, 61 COUNTRIES -->
 		<p class="lead">São múltiplos eventos que acontecem em diversos países</p>
-		<p>Atualmente, <strong>Cachoeiro de Itapemirim</strong> é a única cidade que promove o Arduino Day em terras capixabas</p>
+		<p>Atualmente, <strong class="text-y">Cachoeiro de Itapemirim</strong> é a única cidade que promove o Arduino Day em terras capixabas</p>
 	</div>
 </div>
 {% include google-map.html latitude=-20.803049 longitude=-41.155421 zoom=14 %}
