--- a/inscricao.html
+++ b/inscricao.html
@@ -10,6 +10,8 @@ description: Para a garantir a participação no Arduino Day, é importante se i
 	</div>
 </div>
 <div class="container py-5 text-justify">
+	<p>Em breve...</p>
+	{%- comment -%}
 	{% for activity in site.data.activities %}
 	<div class="py-4">
 		<p class="lead">{{ activity.titulo }}</h2>
@@ -18,4 +20,5 @@ description: Para a garantir a participação no Arduino Day, é importante se i
 	</div>
 	<hr />
 	{% endfor %}
+	{%- endcomment -%}
 </div>
