--- a/submissoes.html
+++ b/submissoes.html
@@ -9,6 +9,8 @@ title: Submissões
 	</div>
 </div>
 <div class="container py-5 text-justify">
+	<p>Em breve...</p>
+	{%- comment -%}
 	<p>
 		Mais que um momento para a apresentação de trabalhos do Ifes Cachoeiro, o Arduino Day é uma oportunidade para ouvir toda a comunidade local / regional sobre as demandas por projetos na área tecnológica.
 	</p>
@@ -23,4 +25,5 @@ title: Submissões
 	</div>
 	<hr />
 	{% endfor %}
+	{%- endcomment -%}
 </div>
