--- a/programacao.html
+++ b/programacao.html
@@ -15,21 +15,29 @@ permalink: /programacao/
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-          <div class="main-timeline">
+
+		<p>
+			Em breve...
+		</p>
+
+          {%- comment -%} 
+		  <div class="main-timeline">
           		{% for schedule in site.data.schedule %}
-						  <div class="timeline">
-						      <span class="timeline-icon"></span>
-						      <span class="year">{{ schedule.horario }}</span>
-						      <div class="timeline-content">
-						          <h3 class="title">{{ schedule.titulo }}</h3>
-						          <p class="description">
-					              {{ schedule.descricao }}
-					              {% if schedule.link %}<a href="{{ schedule.link | prepend: site.baseurl }}">Saiba mais</a>{% endif %}
-						          </p>
-						      </div>
-						  </div>
-							{% endfor %}
-          </div>
+				<div class="timeline">
+					<span class="timeline-icon"></span>
+					<span class="year">{{ schedule.horario }}</span>
+					<div class="timeline-content">
+						<h3 class="title">{{ schedule.titulo }}</h3>
+						<p class="description">
+						{{ schedule.descricao }}
+						{% if schedule.link %}<a href="{{ schedule.link | prepend: site.baseurl }}">Saiba mais</a>{% endif %}
+						</p>
+					</div>
+				</div>
+				{% endfor %}
+          </div> 
+		  {%- endcomment -%}
+		  
       </div>
 		</div>
   </div>
