--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ title: Home
 			</svg>
 			<h3>Onde</h3>
 			<p>
-				Todas as atividades serão realizadas no campus do Ifes em Cachoeiro de Itapemirim - ES. Fique atento à
+				As atividades serão realizadas no campus do Ifes em Cachoeiro de Itapemirim  e na Faculdade de Direito de Cachoeiro de Itapemirim (FDCI). Fique atento à
 				programação do evento para detalhamento do local de realização de cada atividade.
 			</p>
 		</div>
@@ -60,8 +60,8 @@ title: Home
 			<h3 class="h3-text">Palestras</h3>
 			<hr class="hr-15-verde">
 			<p>
-				O estado da arte em Arduino, Impressão 3D, são alguns dos temas a serem abordados nas palestras desta
-				segunda edição do Arduino Day.
+				O estado da arte em Arduino, Impressão 3D, são alguns dos temas a serem abordados nas palestras 
+				desta edição do Arduino Day.
 			</p>
 		</div>
 		<div class="col-lg">
