--- a/inscricao.html
+++ b/inscricao.html
@@ -10,7 +10,7 @@ description: Para a garantir a participação no Arduino Day, é importante se i
 	</div>
 </div>
 <div class="container py-5 text-justify">
-	<p>Em breve...</p>
+	<h2>Em breve...</h2>
 	{%- comment -%}
 	{% for activity in site.data.activities %}
 	<div class="py-4">
