--- a/programacao.html
+++ b/programacao.html
@@ -16,8 +16,9 @@ permalink: /programacao/
     <div class="row">
       <div class="col-md-12">
 
-		<p>
-			Em breve...
+		<h2>Em breve...</h2>
+		<p>			
+			Mas pode marcar na sua agenda os dias 20 e 21 de março.
 		</p>
 
           {%- comment -%} 
