--- a/submissoes.html
+++ b/submissoes.html
@@ -9,7 +9,7 @@ title: Submissões
 	</div>
 </div>
 <div class="container py-5 text-justify">
-	<p>Em breve...</p>
+	<h2>Em breve...</h2>
 	{%- comment -%}
 	<p>
 		Mais que um momento para a apresentação de trabalhos do Ifes Cachoeiro, o Arduino Day é uma oportunidade para ouvir toda a comunidade local / regional sobre as demandas por projetos na área tecnológica.
