adicao contagem regressiva

--- a/index.html
+++ b/index.html
@@ -49,45 +49,51 @@ title: Home
 		</div>
 	</div>
 </div>
-<div class="container text-center py-5">
-	<h2 class="p-4 h2-text">Atividades</h2>
-	<hr class="hr-15-laranja">
-	<div class="row">
-		<div class="col-lg">
-			<svg class="icon icon-envelope-o">
-				<use xlink:href="#icon-envelope-o"></use>
-			</svg>
-			<h3 class="h3-text">Palestras</h3>
-			<hr class="hr-15-verde">
-			<p>
-				O estado da arte em Arduino, Impressão 3D, são alguns dos temas a serem abordados nas palestras 
-				desta edição do Arduino Day.
-			</p>
-		</div>
-		<div class="col-lg">
-			<svg class="icon icon-clock-o">
-				<use xlink:href="#icon-clock-o"></use>
-			</svg>
-			<h3 class="h3-text">Exposições</h3>
-			<hr class="hr-15-verde">
-			<p>
-				Mostra com os trabalhos já desenvolvidos no campus utilizando a plataforma Arduino. Destaque para a
-				apresentação dos trabalhos a serem proferidas pelos próprios alunos.
-			</p>
-		</div>
-		<div class="col-lg">
-			<svg class="icon icon-map-marker">
-				<use xlink:href="#icon-map-marker"></use>
-			</svg>
-			<h3 class="h3-text">Minicursos</h3>
-			<hr class="hr-15-verde">
-			<p>
-				Minicursos para os níveis iniciantes serão oferecidos. Todos com atividades baseadas em exemplos
-				práticos e muito aplicados nos dias de hoje.
-			</p>
+
+{% include contagem-regressiva.html data='2020-03-20 18:00' %}
+
+<div class="container-fluid bg-info text-light py-5 skew-org">
+	<div class="container text-center skew-reverse-org">
+		<h2 class="py-4">Atividades</h2>
+		<hr class="hr-15-branco mb-5">
+		<div class="row">
+			<div class="col-lg">
+				<svg class="icon icon-envelope-o">
+					<use xlink:href="#icon-envelope-o"></use>
+				</svg>
+				<h3>Palestras</h3>
+				<hr class="hr-15-laranja">
+				<p>
+					O estado da arte em Arduino, Impressão 3D, são alguns dos temas a serem abordados nas palestras 
+					desta edição do Arduino Day.
+				</p>
+			</div>
+			<div class="col-lg">
+				<svg class="icon icon-clock-o">
+					<use xlink:href="#icon-clock-o"></use>
+				</svg>
+				<h3>Exposições</h3>
+				<hr class="hr-15-laranja">
+				<p>
+					Mostra com os trabalhos já desenvolvidos no campus utilizando a plataforma Arduino. Destaque para a
+					apresentação dos trabalhos a serem proferidas pelos próprios alunos.
+				</p>
+			</div>
+			<div class="col-lg">
+				<svg class="icon icon-map-marker">
+					<use xlink:href="#icon-map-marker"></use>
+				</svg>
+				<h3>Minicursos</h3>
+				<hr class="hr-15-laranja">
+				<p>
+					Minicursos para os níveis iniciantes serão oferecidos. Todos com atividades baseadas em exemplos
+					práticos e muito aplicados nos dias de hoje.
+				</p>
+			</div>
 		</div>
 	</div>
 </div>
+
 <div id="faq" class="container py-5">
 	<div>
 		<div class="text-center">
