adicao texto pagina inicial

--- a/index.html
+++ b/index.html
@@ -43,14 +43,55 @@ title: Home
 			</svg>
 			<h3>Onde</h3>
 			<p>
-				As atividades serão realizadas no campus do Ifes em Cachoeiro de Itapemirim  e na Faculdade de Direito de Cachoeiro de Itapemirim (FDCI). Fique atento à
+				As atividades serão realizadas no campus do Ifes em Cachoeiro de Itapemirim e na Faculdade de Direito de
+				Cachoeiro de Itapemirim (FDCI). Fique atento à
 				programação do evento para detalhamento do local de realização de cada atividade.
 			</p>
 		</div>
 	</div>
 </div>
 
-{% include contagem-regressiva.html data='2020-03-20 18:00' %}
+
+<div class="container-fluid py-5">
+	<div class="row">
+		<div class="col-md-6">
+			{% include contagem-regressiva.html data='2020-03-20 18:00' %}
+		</div>
+
+		<div class="col-md-6 p-5">
+			<p class="text-justify">
+				Está chegando nosso Arduino Day 2020. O evento deste ano foi
+				pensado em parceria entre o Ifes e a FDCI e abordará 2 temas
+				centrais para discussão: Educação 4.0 e LGPD.
+			</p>
+			<p class="text-justify">
+				Em Educação 4.0 dialogaremos sobre o papel da “nova escola”
+				na formação de profissionais para as novas profissões advindas
+				com a 4a Revolução Industrial.
+			</p>
+			<p class="text-justify">
+				Já com relação à Lei Geral de Proteção de Dados (LGPD),
+				pretendemos trazer à luz da comunidade os principais pontos
+				que tratam o assunto e suas implicações no nosso cotidiano.
+			</p>
+			<p class="text-justify">
+				Confira nossa programação e faça sua inscrição aqui no site.
+			</p>
+			<p class="text-justify">
+				O evento é gratuito e aberto a toda comunidade. Venham
+				participar com a gente!
+			</p>
+			<p class="text-justify">
+				Informamos que, para receber um certificado de participação no
+				evento, o participante deve cadastrar seus dados no site e
+				assinar lista de presença nas atividades.
+			</p>
+			<p class="text-right lead py-4">
+				Comissão organizadora do evento ArduinoD20.
+			</p>
+		</div>
+	</div>
+</div>
 
 <div class="container-fluid bg-info text-light py-5 skew-org">
 	<div class="container text-center skew-reverse-org">
@@ -64,7 +105,7 @@ title: Home
 				<h3>Palestras</h3>
 				<hr class="hr-15-laranja">
 				<p>
-					O estado da arte em Arduino, Impressão 3D, são alguns dos temas a serem abordados nas palestras 
+					O estado da arte em Arduino, Impressão 3D, são alguns dos temas a serem abordados nas palestras
 					desta edição do Arduino Day.
 				</p>
 			</div>
