ajustes de layout

--- a/programacao.html
+++ b/programacao.html
@@ -5,14 +5,14 @@ title: Programação
 description: Fique de olho na programação do evento, pois estará recheado de atividades bacanas.
 permalink: /programacao/
 ---
-<div class="container-fluid bg-info1 text-light py-5">
-	<div class="container">
-		<h1>Programação</h1>
-		<p>Veja as informações das atividades</p>
+<main class="bg-componentes">
+	<div class="container-fluid bg-info1 text-light py-5">
+		<div class="container">
+			<h1>Programação</h1>
+			<p>Veja as informações das atividades</p>
+		</div>
 	</div>
-</div>
-<div class="jumbotron jumbotron-fluid bg-white">
-	<div class="container">
+	<div class="container py-5">
 		<div class="row">
 			<div class="col-md-12">
 				<div class="main-timeline">
@@ -35,4 +35,4 @@ permalink: /programacao/
 			</div>
 		</div>
 	</div>
-</div>
+</main>
