consertado o 'aberto a comunidade'

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Home
 			</svg>
 			<h3>O evento</h3>
 			<p>
-				O evento é totalmente gratuito e aberto a toda comunidade de Cachoeiro e região. Algumas atividades
+				O evento é totalmente gratuito e aberto a toda a comunidade. Algumas atividades
 				requerem inscrição e possuem limite de vaga. Uma agenda detalhada da programação será divulgada online
 				previamente.
 			</p>
